// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render reference with auto load - errored 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodayReference
    autoLoad={true}
    fetchLog={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
        ],
      }
    }
    uuid="1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Tooltip
        align={Object {}}
        arrowContent={null}
        destroyTooltipOnHide={false}
        mouseEnterDelay={0.3}
        mouseLeaveDelay={0.1}
        overlay="1"
        placement="bottom"
        prefixCls="rc-tooltip"
        trigger={
          Array [
            "hover",
          ]
        }
        visible={false}
      >
        <div
          className="TodayReference__Error flex flex-align-items-center"
        >
          <i
            className="fas fa-exclamation-circle TodayReference__Icon"
          />
          <span>
            Could not load 
            <code>
              1
            </code>
            :
            <br />
            error
          </span>
        </div>
      </Tooltip>,
      "className": "TodayReference TodayReference__Errored",
      "onBlur": [Function],
      "onFocus": [Function],
      "onMouseOut": [Function],
      "onMouseOver": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": Object {},
        "arrowContent": null,
        "children": <div
          className="TodayReference__Error flex flex-align-items-center"
        >
          <i
            className="fas fa-exclamation-circle TodayReference__Icon"
          />
          <span>
            Could not load 
            <code>
              1
            </code>
            :
            <br />
            error
          </span>
        </div>,
        "destroyTooltipOnHide": false,
        "mouseEnterDelay": 0.3,
        "mouseLeaveDelay": 0.1,
        "overlay": "1",
        "placement": "bottom",
        "prefixCls": "rc-tooltip",
        "trigger": Array [
          "hover",
        ],
        "visible": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <i
              className="fas fa-exclamation-circle TodayReference__Icon"
            />,
            <span>
              Could not load 
              <code>
                1
              </code>
              :
              <br />
              error
            </span>,
          ],
          "className": "TodayReference__Error flex flex-align-items-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "fas fa-exclamation-circle TodayReference__Icon",
            },
            "ref": null,
            "rendered": null,
            "type": "i",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Could not load ",
                <code>
                  1
                </code>,
                ":",
                <br />,
                "error",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Could not load ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "1",
                },
                "ref": null,
                "rendered": "1",
                "type": "code",
              },
              ":",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              "error",
            ],
            "type": "span",
          },
        ],
        "type": "div",
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Tooltip
          align={Object {}}
          arrowContent={null}
          destroyTooltipOnHide={false}
          mouseEnterDelay={0.3}
          mouseLeaveDelay={0.1}
          overlay="1"
          placement="bottom"
          prefixCls="rc-tooltip"
          trigger={
            Array [
              "hover",
            ]
          }
          visible={false}
        >
          <div
            className="TodayReference__Error flex flex-align-items-center"
          >
            <i
              className="fas fa-exclamation-circle TodayReference__Icon"
            />
            <span>
              Could not load 
              <code>
                1
              </code>
              :
              <br />
              error
            </span>
          </div>
        </Tooltip>,
        "className": "TodayReference TodayReference__Errored",
        "onBlur": [Function],
        "onFocus": [Function],
        "onMouseOut": [Function],
        "onMouseOver": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": Object {},
          "arrowContent": null,
          "children": <div
            className="TodayReference__Error flex flex-align-items-center"
          >
            <i
              className="fas fa-exclamation-circle TodayReference__Icon"
            />
            <span>
              Could not load 
              <code>
                1
              </code>
              :
              <br />
              error
            </span>
          </div>,
          "destroyTooltipOnHide": false,
          "mouseEnterDelay": 0.3,
          "mouseLeaveDelay": 0.1,
          "overlay": "1",
          "placement": "bottom",
          "prefixCls": "rc-tooltip",
          "trigger": Array [
            "hover",
          ],
          "visible": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                className="fas fa-exclamation-circle TodayReference__Icon"
              />,
              <span>
                Could not load 
                <code>
                  1
                </code>
                :
                <br />
                error
              </span>,
            ],
            "className": "TodayReference__Error flex flex-align-items-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-exclamation-circle TodayReference__Icon",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Could not load ",
                  <code>
                    1
                  </code>,
                  ":",
                  <br />,
                  "error",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Could not load ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "1",
                  },
                  "ref": null,
                  "rendered": "1",
                  "type": "code",
                },
                ":",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                "error",
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render reference with auto load - log exists 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodayReference
    autoLoad={true}
    fetchLog={
      [MockFunction] {
        "calls": Array [
          Array [
            "1",
          ],
        ],
      }
    }
    uuid="1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Tooltip
        align={Object {}}
        arrowContent={null}
        destroyTooltipOnHide={false}
        mouseEnterDelay={0.3}
        mouseLeaveDelay={0.1}
        overlay="1"
        placement="bottom"
        prefixCls="rc-tooltip"
        trigger={
          Array [
            "hover",
          ]
        }
        visible={false}
      >
        <Markdown
          autoLoadReferences={false}
          className=""
          text="pizza yolo"
        />
      </Tooltip>,
      "className": "TodayReference",
      "onBlur": [Function],
      "onFocus": [Function],
      "onMouseOut": [Function],
      "onMouseOver": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": Object {},
        "arrowContent": null,
        "children": <Markdown
          autoLoadReferences={false}
          className=""
          text="pizza yolo"
        />,
        "destroyTooltipOnHide": false,
        "mouseEnterDelay": 0.3,
        "mouseLeaveDelay": 0.1,
        "overlay": "1",
        "placement": "bottom",
        "prefixCls": "rc-tooltip",
        "trigger": Array [
          "hover",
        ],
        "visible": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "autoLoadReferences": false,
          "className": "",
          "text": "pizza yolo",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Tooltip
          align={Object {}}
          arrowContent={null}
          destroyTooltipOnHide={false}
          mouseEnterDelay={0.3}
          mouseLeaveDelay={0.1}
          overlay="1"
          placement="bottom"
          prefixCls="rc-tooltip"
          trigger={
            Array [
              "hover",
            ]
          }
          visible={false}
        >
          <Markdown
            autoLoadReferences={false}
            className=""
            text="pizza yolo"
          />
        </Tooltip>,
        "className": "TodayReference",
        "onBlur": [Function],
        "onFocus": [Function],
        "onMouseOut": [Function],
        "onMouseOver": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": Object {},
          "arrowContent": null,
          "children": <Markdown
            autoLoadReferences={false}
            className=""
            text="pizza yolo"
          />,
          "destroyTooltipOnHide": false,
          "mouseEnterDelay": 0.3,
          "mouseLeaveDelay": 0.1,
          "overlay": "1",
          "placement": "bottom",
          "prefixCls": "rc-tooltip",
          "trigger": Array [
            "hover",
          ],
          "visible": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "autoLoadReferences": false,
            "className": "",
            "text": "pizza yolo",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render reference without auto load - loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodayReference
    autoLoad={false}
    fetchLog={[MockFunction]}
    uuid="1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Tooltip
        align={Object {}}
        arrowContent={null}
        destroyTooltipOnHide={false}
        mouseEnterDelay={0.3}
        mouseLeaveDelay={0.1}
        overlay="1"
        placement="bottom"
        prefixCls="rc-tooltip"
        trigger={
          Array [
            "hover",
          ]
        }
        visible={false}
      >
        <div
          className="TodayReference__Loading text-muted"
        >
          <em>
            <i
              className="fas fa-circle-notch fa-spin TodayReference__Icon"
            />
            Loading 
            <code>
              1
            </code>
            ...
          </em>
        </div>
      </Tooltip>,
      "className": "TodayReference",
      "onBlur": [Function],
      "onFocus": [Function],
      "onMouseOut": [Function],
      "onMouseOver": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": Object {},
        "arrowContent": null,
        "children": <div
          className="TodayReference__Loading text-muted"
        >
          <em>
            <i
              className="fas fa-circle-notch fa-spin TodayReference__Icon"
            />
            Loading 
            <code>
              1
            </code>
            ...
          </em>
        </div>,
        "destroyTooltipOnHide": false,
        "mouseEnterDelay": 0.3,
        "mouseLeaveDelay": 0.1,
        "overlay": "1",
        "placement": "bottom",
        "prefixCls": "rc-tooltip",
        "trigger": Array [
          "hover",
        ],
        "visible": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <em>
            <i
              className="fas fa-circle-notch fa-spin TodayReference__Icon"
            />
            Loading 
            <code>
              1
            </code>
            ...
          </em>,
          "className": "TodayReference__Loading text-muted",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <i
                className="fas fa-circle-notch fa-spin TodayReference__Icon"
              />,
              "Loading ",
              <code>
                1
              </code>,
              "...",
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fas fa-circle-notch fa-spin TodayReference__Icon",
              },
              "ref": null,
              "rendered": null,
              "type": "i",
            },
            "Loading ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "1",
              },
              "ref": null,
              "rendered": "1",
              "type": "code",
            },
            "...",
          ],
          "type": "em",
        },
        "type": "div",
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Tooltip
          align={Object {}}
          arrowContent={null}
          destroyTooltipOnHide={false}
          mouseEnterDelay={0.3}
          mouseLeaveDelay={0.1}
          overlay="1"
          placement="bottom"
          prefixCls="rc-tooltip"
          trigger={
            Array [
              "hover",
            ]
          }
          visible={false}
        >
          <div
            className="TodayReference__Loading text-muted"
          >
            <em>
              <i
                className="fas fa-circle-notch fa-spin TodayReference__Icon"
              />
              Loading 
              <code>
                1
              </code>
              ...
            </em>
          </div>
        </Tooltip>,
        "className": "TodayReference",
        "onBlur": [Function],
        "onFocus": [Function],
        "onMouseOut": [Function],
        "onMouseOver": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": Object {},
          "arrowContent": null,
          "children": <div
            className="TodayReference__Loading text-muted"
          >
            <em>
              <i
                className="fas fa-circle-notch fa-spin TodayReference__Icon"
              />
              Loading 
              <code>
                1
              </code>
              ...
            </em>
          </div>,
          "destroyTooltipOnHide": false,
          "mouseEnterDelay": 0.3,
          "mouseLeaveDelay": 0.1,
          "overlay": "1",
          "placement": "bottom",
          "prefixCls": "rc-tooltip",
          "trigger": Array [
            "hover",
          ],
          "visible": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <em>
              <i
                className="fas fa-circle-notch fa-spin TodayReference__Icon"
              />
              Loading 
              <code>
                1
              </code>
              ...
            </em>,
            "className": "TodayReference__Loading text-muted",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <i
                  className="fas fa-circle-notch fa-spin TodayReference__Icon"
                />,
                "Loading ",
                <code>
                  1
                </code>,
                "...",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-circle-notch fa-spin TodayReference__Icon",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
              "Loading ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "1",
                },
                "ref": null,
                "rendered": "1",
                "type": "code",
              },
              "...",
            ],
            "type": "em",
          },
          "type": "div",
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`render reference without auto load 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TodayReference
    autoLoad={false}
    fetchLog={[MockFunction]}
    uuid="1"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Tooltip
        align={Object {}}
        arrowContent={null}
        destroyTooltipOnHide={false}
        mouseEnterDelay={0.3}
        mouseLeaveDelay={0.1}
        overlay="1"
        placement="bottom"
        prefixCls="rc-tooltip"
        trigger={
          Array [
            "hover",
          ]
        }
        visible={false}
      >
        <div
          className="TodayReference__Load text-muted"
        >
          <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Load 
            <code>
              1
            </code>
          </button>
        </div>
      </Tooltip>,
      "className": "TodayReference",
      "onBlur": [Function],
      "onFocus": [Function],
      "onMouseOut": [Function],
      "onMouseOver": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "align": Object {},
        "arrowContent": null,
        "children": <div
          className="TodayReference__Load text-muted"
        >
          <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Load 
            <code>
              1
            </code>
          </button>
        </div>,
        "destroyTooltipOnHide": false,
        "mouseEnterDelay": 0.3,
        "mouseLeaveDelay": 0.1,
        "overlay": "1",
        "placement": "bottom",
        "prefixCls": "rc-tooltip",
        "trigger": Array [
          "hover",
        ],
        "visible": false,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn btn-outline-primary"
            onClick={[Function]}
          >
            Load 
            <code>
              1
            </code>
          </button>,
          "className": "TodayReference__Load text-muted",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Load ",
              <code>
                1
              </code>,
            ],
            "className": "btn btn-outline-primary",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            "Load ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "1",
              },
              "ref": null,
              "rendered": "1",
              "type": "code",
            },
          ],
          "type": "button",
        },
        "type": "div",
      },
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Tooltip
          align={Object {}}
          arrowContent={null}
          destroyTooltipOnHide={false}
          mouseEnterDelay={0.3}
          mouseLeaveDelay={0.1}
          overlay="1"
          placement="bottom"
          prefixCls="rc-tooltip"
          trigger={
            Array [
              "hover",
            ]
          }
          visible={false}
        >
          <div
            className="TodayReference__Load text-muted"
          >
            <button
              className="btn btn-outline-primary"
              onClick={[Function]}
            >
              Load 
              <code>
                1
              </code>
            </button>
          </div>
        </Tooltip>,
        "className": "TodayReference",
        "onBlur": [Function],
        "onFocus": [Function],
        "onMouseOut": [Function],
        "onMouseOver": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "align": Object {},
          "arrowContent": null,
          "children": <div
            className="TodayReference__Load text-muted"
          >
            <button
              className="btn btn-outline-primary"
              onClick={[Function]}
            >
              Load 
              <code>
                1
              </code>
            </button>
          </div>,
          "destroyTooltipOnHide": false,
          "mouseEnterDelay": 0.3,
          "mouseLeaveDelay": 0.1,
          "overlay": "1",
          "placement": "bottom",
          "prefixCls": "rc-tooltip",
          "trigger": Array [
            "hover",
          ],
          "visible": false,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn btn-outline-primary"
              onClick={[Function]}
            >
              Load 
              <code>
                1
              </code>
            </button>,
            "className": "TodayReference__Load text-muted",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Load ",
                <code>
                  1
                </code>,
              ],
              "className": "btn btn-outline-primary",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              "Load ",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "1",
                },
                "ref": null,
                "rendered": "1",
                "type": "code",
              },
            ],
            "type": "button",
          },
          "type": "div",
        },
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
